<resources>
    <string name="app_name">CST2335 Final Project</string>
    <string name="welcom_message">Welcom to CST2355 Final Project</string>
    <string name="livingroom">Living Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="house">House</string>
    <string name="auto">Automobile</string>


    <string name="HouseActivityName">House</string>
    <string name="HouseHintString">Please type something here</string>
    <string name="confirmB">Confirm</string>
    <string name="labelHouseNumberPicker">Number Picker</string>
    <string name="houseHour">Hour</string>
    <string name="houseMinute">Minute</string>
    <string name="houseSecond">Second</string>
    <string name="houseMonth">Month</string>
    <string name="houseDay">Day</string>
    <string name="houseYear">Year</string>
    <string name="houseSubmit">Submit</string>
    <string name="houseTemp">Temperature</string>
    <string name="houseAddButton">ADD</string>
    <string name="houseDelButton">Delete</string>
    <string name="houseAuthor">Chen Wang\nVersion 1.0.0\nThis house activity allow you to set the temperature of your house, check the outside weather and control your garage remotely</string>
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="houseLightON">Light On</string>
    <string name="houseLightOFF">Light OFF</string>
    <string name="houseDoorON">House Door ON</string>
    <string name="houseDoorOFF">House Door OFF</string>
    <string name="houseDoorStatement">Door Statement: </string>
    <string name="houseLightStatement">Light Statement: </string>

    <string name="houseOn">ON</string>
    <string name="houseOff">OFF</string>



    <string name="title_activity_start">FinalProject</string>
    <string name="autotemperature">Temperature</string>
    <string name="autoradio">Radio</string>
    <string name="autogps">GPS</string>
    <string name="autolight">Light</string>
    <string name="autohelp">Help</string>
    <string name="autosettemperature">Set Vehicle Temperature</string>
    <string name="autosetlowtemperature">Set The Lowest Vehicle Temperature</string>
    <string name="autosethightemperature">Set The Highest Vehicle Temperature</string>
    <string name="autotempset">Set</string>
    <string name="autotempexit">Exit</string>
    <string name="autotempdisplay">Display</string>
    <string name="autowelcome">Welcome To Auto Application</string>
    <string name="autoactivityreturn">Return</string>
    <string name="autoactivitysetting">Set</string>
    <string name="autolightdim">Auto Light Dimable</string>
    <string name="autoheadlightswitch">Normal/High</string>
    <string name="fmwelcome">Welcome to FM Radio Setting/High</string>
    <string name="autoFmChannelName">Auto FM Channel Name</string>
    <string name="fmChadd">add Channel</string>
    <string name="fmfrtunecontr">FM Radio Channel Tune</string>
    <string name="autofmvolumcontr">FM Volume control</string>
    <string name="mute">Mute</string>
    <string name="autoFmChannelNo">Auto Channel No</string>
    <string name="about">About</string>
    <string name="lowtemp">Enter the Lowest Temperature Here</string>
    <string name="hightemp">Enter the Highest Temperature Here</string>
    <string name="autoenterchanno">Enter FM channel Number here</string>
    <string name="autoenterchanname">Enter FM channel Name here</string>
    <string name="autoauthor">Author: Bo Liu</string>
    <string name="autoversion">Version:  V1</string>
    <string name="autoinstruction">Instruction: Click on each item, it will bring you to next level  </string>


    <string name="living_blinds">Window Blinds Control</string>
    <string name="living_colorlamp3">Colorful Lamp</string>
    <string name="living_tvcontrol">TV Control</string>
    <string name="living_tvonoff">On/Off</string>
    <string name="living_lamp3logout">Return</string>
    <string name="living_tvlogout">Return</string>
    <string name="living_blindslogout">Return</string>
    <string name="living_lamp3colorshow">Here shows your color choice</string>
    <string name="living_lamp3colorchoose">Color Choose</string>
    <string name="living_lamponoff">Lamp On/Off</string>
    <string name="living_lampreturn">Return</string>
    <string name="living_lamp2dim">Lamp Dimmable</string>
    <string name="living_lamp2logout">Return</string>
    <string name="living_deletemessage">Delete This Item</string>
    <string name="living_roomcustombt">Customizing Equipment</string>
    <string name="living_refreshbt">Refresh Status</string>
    <string name="living_checkboxm1">Lamp1</string>
    <string name="living_checkboxm2">Lamp2</string>
    <string name="living_checkboxm3">Lamp3</string>
    <string name="living_checkboxtv">TV</string>
    <string name="living_checkboxblinds">Blinds</string>
    <string name="living_confirmbt">Confirm Your Choice</string>
    <string name="living_tvchannel">Choose TV Channel</string>
    <string name="living_helpinfo">Help Info</string>
    <string name="living_helpcontent">\t\tThe LivingRoomActivity, Version 1.0, is written by Min Luo. \n\t\tThis activity provides three lamps, one tv, and one blinds for users to control.\n\tUsers could enter different control pages by clicking each item, changes the status, and click confirm buttons to return back to the main page of LivingRoom. Refresh button is used to get updated status. \n\t\tWhen clicking customizing button, users can add and delete items as you like.</string>



    <string name="kitchensnacktext">INFORMATION SAVING</string>
    <string name="kitchenlightison">Light is On</string>
    <string name="kitchenlightisoff">light is off</string>
    <string name="kitchenlightturnon">Turn light on</string>
    <string name="kitchenlightbackbutton">Save and Back</string>
    <string name="fridgesnackbartext">TEMPERATURE SAVED SUCCESSFUL</string>
    <string name="fridgetempchangetext">Fridge Temp is </string>
    <string name="freezertempchagetext">Freezer Temp is </string>
    <string name="fridgesavebuttontext">SAVE</string>
    <string name="freezertemptext">Freezer Temp: -10 °C</string>
    <string name="fridgeandfreezersetbutton">SET</string>
    <string name="fridgetemptext">Fridge Temp: 0 °C</string>
    <string name="microtimefinishtext">Time up</string>
    <string name="microtimetext">Time</string>
    <string name="microinputtext">Enter time in seconds</string>
    <string name="microresetbuttontext">CANCEL/RESET</string>
    <string name="microexitbuttontext">EXIT</string>
     <string name="microresumebuttontext">RESUME</string>
     <string name="microoffbuttontext">PAUSE</string>
    <string name="microstartbuttontext">START</string>
    <string name="kitchenreturntohomepage">RETURN TO HOMEPAGE</string>
    <string name="kitchenhelpbuttontext">HELP</string>
    <string name="kitchenrefreshbuttontext">REFRESH</string>
    <string name="welcomekitchentext">WELCOME TO MY KITCHEN</string>
    <string name="micro_dialog_title">Exit</string>
    <string name="micro_dialog_message">Do you want to back to kitchen page?</string>
    <string name="micro_ok">ok</string>
    <string name="micro_cancel">cancel</string>
    <string name="kichenhelp_title">Kitchen Help Information</string>
    <string name="kichenhelp_dialog_message">Author:Tao Wang \n Version:1.0 \n Information: \n -click the items on the list, you will
    enter into the page of the item \n -click on return button to back to home page \n click on refresh button to save all information \n
        click add and delete button to add or delete items \n if you want to restore to the default page, delete all items and re-entry kitchen page
    </string>
    <string name="kitchenspinnerText">Please select one type of the items</string>
    <string name="textofkitchenspinnerbutton">Confirm</string>
    <string name="textofkitchenselectdel">please choose a item</string>
    <string name="textofkitchenitementerdialog">Please enter the name of the item</string>
    <string name="buttonofkitchenspinneradd">ADD DEVICE</string>
    <string name="buttonofkitchenspinnerdel">DELETE DEVICE</string>
    <string name="defaultmicrowave">Microwave</string>
    <string name="defaultfridge">Samsung Fridge</string>
    <string name="defaultfreezer">Samsung Freezer</string>
    <string name="defaultkitchenlight">Main celing Light</string>







</resources>
