<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:id="@+id/autoactivitylayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.algonquin.cst2335final.AutoActivity">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autowelcome"
            android:layout_gravity="center"

            android:textSize="20dp"
            android:singleLine="true"
            android:textColor="@android:color/holo_blue_light" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autoactivitylistview" />

        <Button
            android:id="@+id/autoAvtivityReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoactivityreturn"/>

        <Button
            android:id="@+id/autoSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/micro_cancel"/>

            android:text="@string/autoactivitysetting"/>




    </LinearLayout>