<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_lamp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquin.cst2335final.Lamp3Activity">


    <TextView
        android:text="@string/living_colorlamp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lamp3" />

    <SeekBar
        android:id="@+id/lampDimmable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/colorlamptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/living_lamp3colorshow"/>

    <Button
        android:id="@+id/colorlampbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/living_lamp3colorchoose" />

    <Button
        android:id="@+id/livinglampbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/living_lamp3logout" />


</LinearLayout>
