<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.algonquin.cst2335final.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcom_message"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"/>

    <Button
        android:text="@string/livingroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:id="@+id/livingroombutton" />

    <Button
        android:text="@string/kitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/livingroombutton"
        android:layout_alignRight="@+id/livingroombutton"
        android:layout_alignEnd="@+id/livingroombutton"
        android:layout_marginTop="38dp"
        android:id="@+id/kitchenbutton"
        />

    <Button
        android:text="@string/house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/housebutton"
        android:layout_below="@+id/kitchenbutton"
        android:layout_alignLeft="@+id/kitchenbutton"
        android:layout_alignStart="@+id/kitchenbutton"
        android:layout_marginTop="18dp" />
    <Button
        android:text="@string/auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autobutton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/housebutton"
        android:layout_alignStart="@+id/housebutton" />


</RelativeLayout>