<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_house_number_pickers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquin.cst2335final.HouseNumberPickers">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/houseHour"

        android:id="@+id/houseHourLabel"
        android:textAlignment="center"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/houseMinute"
        android:textAlignment="center"
        android:id="@+id/houseMinuteLabel"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/houseSecond"
        android:textAlignment="center"
        android:id="@+id/houseScondLabel"
        />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/house_min_picker"
        android:layout_alignBaseline="@+id/house_hour_picker"
        android:layout_alignBottom="@+id/house_hour_picker"
        android:layout_toEndOf="@+id/house_hour_picker" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/house_sec_picker"
        android:layout_alignBaseline="@+id/house_min_picker"
        android:layout_alignBottom="@+id/house_min_picker"
        android:layout_toEndOf="@+id/house_min_picker" />

    <NumberPicker
        android:layout_marginStart="53dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/house_hour_picker"
        android:layout_below="@+id/houseHourLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/houseTempLabel"
        android:text="@string/houseTemp"
        android:layout_below="@+id/house_hour_picker"
        android:layout_alignStart="@+id/house_hour_picker"
        android:layout_marginTop="42dp" />


    <NumberPicker
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:id="@+id/house_temp_picker"
        android:layout_below="@+id/houseTempLabel"
        android:layout_alignStart="@+id/houseTempLabel" />

    <Button
        android:text="@string/houseSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/HouseNumberPickerSubmitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
