<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_microwave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquin.cst2335final.MicrowaveActivity">
    <TextView
        android:text="@string/microinputtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTime"
        android:layout_marginTop="19dp"
        android:id="@+id/textViewofMicro"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:ems="10"
        android:layout_marginStart="49dp"
        android:layout_marginTop="12dp"
        android:id="@+id/editTime"
        android:layout_below="@+id/textViewofMicro"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/microstartbuttontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editTime"
        android:layout_alignStart="@+id/editTime"
        android:id="@+id/buttonMicStart" />

    <Button
        android:text="@string/microresetbuttontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMicCancel"
        android:layout_below="@+id/buttonMicStop"
        android:layout_alignStart="@+id/buttonMicStop"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:id="@+id/timeShow"
        android:text="time"
        android:layout_alignBaseline="@+id/buttonMicStop"
        android:layout_alignBottom="@+id/buttonMicStop"
        android:layout_toEndOf="@+id/editTime"
        android:textSize="25dp"/>

    <Button
        android:text="@string/microexitbuttontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMicCancel"
        android:layout_alignStart="@+id/buttonMicCancel"
        android:layout_marginTop="14dp"
        android:id="@+id/buttonMicexit" />

    <ToggleButton
        android:text="@string/microoffbuttontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMicStop"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/buttonMicStart"
        android:layout_alignStart="@+id/buttonMicStart" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/microwaveoff"
        android:id="@+id/imageOfmicrowave"
        android:layout_alignBottom="@+id/buttonMicexit"
        android:layout_toEndOf="@+id/textViewofMicro" />


</RelativeLayout>
