<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.algonquin.cst2335final.AutoLight">


    <TextView
        android:id="@+id/autolightdim"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize = "20dp"
        android:text="@string/autolightdim"
        android:layout_gravity="center"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal = "true"
        android:layout_alignParentTop="true" />

    <SeekBar
        android:id="@+id/autolightseekBar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/autolightdim"
        android:layout_alignParentEnd="true" />


    <ImageButton
        android:id="@+id/autoimagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/autolighthigh"
        android:gravity="center_vertical"
        android:layout_above="@+id/autoswitchlight"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp" />

    <Switch
        android:id="@+id/autoswitchlight"
        android:text="@string/autoheadlightswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal"
        android:layout_above="@+id/autolightexit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />

    <Button
        android:id="@+id/autolightexit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autotempexit"
        android:layout_marginBottom="88dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
